# hedge-fund-research

./: .env.example  .envrc  .gitignore  AVAILABLE-TOOLS.md  BEFORE_AFTER_FEATURES.md  BUG_REPORT.md  CHART_DELIVERABLES.md  CHART_FIX_REPORT.md  CLAUDE.md  DELIVERABLES_SUMMARY.md  FEATURE_IMPLEMENTATION_REPORT.md  FRONTEND_DELIVERABLES.md  FRONTEND_SUMMARY.md  MCP-CONNECTION-ISSUE.md  MCP-FINAL-FIX.md  MCP-FIX-APPLIED.md  MCP-SETUP-STATUS.md  MCP-STATUS-REPORT.md  MCP-TEST-RESULTS.md  POLISH_REPORT.md  PROGRESS.md  PROMPT.md  README.md  RESEARCH-ORCHESTRATOR-SETUP.md  SCREENER_README.md  SETUP-COMPLETE.md  SUPERPOWERS-INSTALL-INSTRUCTIONS.md  SUPERPOWERS-MANUAL-SETUP.md  SUPERPOWERS-NEXT-STEPS.md  SUPERPOWERS-SETUP.md  SUPERPOWERS-STATUS.md  SUPERPOWERS-VERIFICATION.md  TASK_COMPLETION_SUMMARY.md  TODO.md  activate.sh  alpha-gpt-results.html  config.py  pyproject.toml  ralph.yml  requirements.txt
.claude/: SUPERPOWERS-QUICK-START.md
afml/: __init__.py  bet_sizing.py  bootstrap.py  checks.py  cpcv.py  cusum.py  cv.py  diagnostics.py  labels.py  meta_labeling.py  metrics.py  portfolio.py  regime.py  regime_composite.py  weights.py
agents/: data_pipeline.py  events.py  momentum_researcher.py  project_manager.py
agents-reports/: 2026-01-22-afml-consensus-summary.md  2026-01-22-afml-consensus-transcript.md
analysis/: __init__.py  metrics.py  obsidian_reports.py  politician_tracker.py  reports.py  visualization.py
backend/: main.py  requirements.txt
config/: politicians.yaml
data/: __init__.py
docs/: CONFIGURATION-STATUS.md  CONFIGURATION.md  GITHUB-SYNC-READY.md  (+19 more)
(+284 files in other folders)
