[project]
name = "hedge-fund-research"
version = "0.1.0"
description = "EOD equities backtesting system for strategy research"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [".venv", "notebooks"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "duckdb.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "notebooks", ".ralph"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["data", "strategy", "analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "smoke: quick validation tests (5 key symbols, fast)",
    "universe: full S&P 500 coverage tests (slow, hits API)",
]
